# neovim-manager

./: CLAUDE.md  Cargo.toml
src/: lib.rs
src/control/: main.rs
src/launcher/: main.rs
src/manager/: main.rs
